// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ArticleDataloaderService load should load many 1`] = `
[
  {
    "where": {
      "id": {
        "in": [
          "123",
          "321",
        ],
      },
    },
  },
]
`;

exports[`ArticleDataloaderService load should load one 1`] = `
[
  {
    "where": {
      "id": {
        "in": [
          "123",
        ],
      },
    },
  },
]
`;

exports[`ArticleDataloaderService should prime 1`] = `
[
  "123",
  {},
]
`;
